Fix: Name with title and for dark mode

--- a/src/Components/Name/Name.css
+++ b/src/Components/Name/Name.css
@@ -6,6 +6,9 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+
+    /* background: #222; 
+    overflow: hidden; */
 }
 
 video {
@@ -13,11 +16,60 @@ video {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: auto;
+    aspect-ratio: 16 / 9;
     object-fit: cover;
 }
 
 h1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    margin: 0;
+    font-weight: 900;
+    font-size: 15vw;
+    text-transform: uppercase;
+    background-color:#ffffff;
+    background-color: #000000;
+    /* background-color: darkblue; */
+    /* background-color: whitesmoke; */
+    color: #ffffff;
+    /* mix-blend-mode: screen; */
+    mix-blend-mode: multiply;
+    font-family: "Cinzel", serif;
+    text-align: center;
+    margin-bottom: 0;
+    /* border: 1vw solid white; */
+}
+
+.carissa {
+    position: relative;
+    top: 6vw;
+    left: 0;
+    font-size: 18vw;
+}
+
+.hluchan {
+    position: relative;
+    top: 2.2vw;
+    left: 0;
+}
+
+.h1-span {
+    font-size: 5vw;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 2vw;
+}
+/* h1 {
     position: absolute;
     top: 0;
     left: 0;
@@ -30,12 +82,13 @@ h1 {
     font-weight: 900;
     font-size: 15vw;
     text-transform: uppercase;
-    background-color:#ffffff;
-    mix-blend-mode: screen;
+    background-color: #000000;
+    mix-blend-mode: screen; 
+    color: white; 
     font-family: "Cinzel", serif;
     text-align: center;
-    /* border: 2px solid red; */
-}
+    pointer-events: none; 
+} */
 
 /* .name-section {
     padding: 0;
